# marinetime-tracer

./: .gitignore  requirements.txt
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml  requirements.txt
db/: .gitignore  dump.sh  schema.sql
mt-colector-bot/: .gitignore  positions.json
mt-collector-bot/: .env.template  .gitignore  bot.py  build.sh  collector.py  requirements.txt  script.sh  start.sh  upload.py
mt-db/: .env.template  package-lock.json  package.json  vitest.config.js
mt-grabber/: Dockerfile  build.sh  sorter.py  start.sh  upload.py
mt-py-tools/: api.txt  pyproject.toml
mt-py-tools/scripts/: README.md  build_dataset_hdf5.py  build_track_restore_artifacts.py  detect_tracks.py  export_public_api.py  extract_poi.py  filter_dataset.py  import_zones.py  repack_tracksorted_dataset.py  show_dataset_info.py
mt-py-tools/scripts/nn-track-restore/: eval_track_restore.py  preview_track_restore_routes.py  preview_track_restore_samples.py  train_track_restore_artifacts.py
mt-py-tools/src/mtlib/: __init__.py  dataset.py
mt-py-tools/src/mtlib/dataset/: __init__.py  ds.py  filtering.py  poi.py  raw.py  tracks.py  tsorted.py  zones.py
mt-py-tools/src/mtlib/nn/: __init__.py  artifacts.py  checkpoints.py  config.py  data.py  geo.py  infer.py  losses.py  metrics.py  postprocess.py  train.py  visualize.py
mt-py-tools/src/mtlib/nn/models/: __init__.py  unet_attn.py
research/: .gitignore  0-open-website.ipynb  1-try-to-parse.ipynb  10-ship-tracks-animation.ipynb  11-dataset-prepare-hdf5.ipynb  12-zones-prepare-hdf5.ipynb  basic_uc.py  (+28 more)
(+12 files in other folders)
