[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mtlib"
version = "0.1.0"
description = "Marinetime Tracer utilities for dataset processing and ML experiments"
requires-python = ">=3.13"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]